project-java/deployment/shopping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: shopping
  name: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shopping
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/cicdnetwork: "true"
        io.kompose.service: shopping
    spec:
      containers:
        - image: steph/shopping:latest
          name: shopping
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
