project-java/deployment/cicdnetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cicdnetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cicdnetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cicdnetwork: "true"
